--- a/src/app/biology-section/biology-section.component.html
+++ b/src/app/biology-section/biology-section.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Biology</h1>
+  <h1 class="mat-h1">Overview of the biological design</h1>
 
   <mat-card class="dashboard-card" >
 
