--- a/src/app/biology-section/parts/parts.component.html
+++ b/src/app/biology-section/parts/parts.component.html
@@ -5,7 +5,7 @@
 
     <h2>Bistable system</h2>
 
-    <img src="/assets/lee5_ler.png" class="card-illus">
+    <img src="http://2018.igem.org/wiki/images/a/ab/T--GO_Paris-Saclay--LEE5-ler.png" class="card-illus">
 
     <mat-card (mouseenter)='mouseenter($event)' (mouseleave)="mouseleave($event)" class="z-depth" class="part-card">
       <mat-card-header>
