--- a/src/app/biology-section/parts/parts.component.html
+++ b/src/app/biology-section/parts/parts.component.html
@@ -11,7 +11,7 @@
       <mat-card-header>
         <div mat-card-avatar class="cpg2-header-image"></div>
         <mat-card-title>LEE5 Promoter</mat-card-title>
-        <mat-card-subtitle>LEE5 &mdash; BBa_K??????</mat-card-subtitle>
+        <mat-card-subtitle>LEE5 &mdash; BBa_K2688010 to BBa_K2688018</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>A constitutive promoter regulated by H-NS (E coli endogeneous) and ler.</mat-card-content>
       <mat-card-actions><button mat-raised-button color="accent" routerLink="/biology/lee5">More about this part</button> <button mat-raised-button color="accent">Registry page</button></mat-card-actions>
