--- a/src/app/biology-section/parts/parts.component.html
+++ b/src/app/biology-section/parts/parts.component.html
@@ -9,22 +9,22 @@
 
     <mat-card (mouseenter)='mouseenter($event)' (mouseleave)="mouseleave($event)" class="z-depth" class="part-card">
       <mat-card-header>
-        <div mat-card-avatar class="cpg2-header-image"></div>
-        <mat-card-title>LEE5 Promoter</mat-card-title>
+        <mat-card-title>LEE5 promoter series</mat-card-title>
         <mat-card-subtitle>LEE5 &mdash; BBa_K2688010 to BBa_K2688018</mat-card-subtitle>
       </mat-card-header>
-      <mat-card-content>A constitutive promoter regulated by H-NS (E coli endogeneous) and ler.</mat-card-content>
-      <mat-card-actions><button mat-raised-button color="accent" routerLink="/biology/lee5">More about this part</button> <button mat-raised-button color="accent">Registry page</button></mat-card-actions>
+      <mat-card-content>A constitutive promoter regulated by H-NS (E coli endogeneous) and ler, which allows for heterogeneous expression
+         of downstream gene. Several variants are available, with design implications.</mat-card-content>
+      <mat-card-actions><button mat-raised-button color="accent" routerLink="/biology/lee5">More about these parts</button></mat-card-actions>
     </mat-card>
 
     <mat-card (mouseenter)='mouseenter($event)' (mouseleave)="mouseleave($event)" class="z-depth" class="part-card">
       <mat-card-header>
-        <div mat-card-avatar class="cpg2-header-image"></div>
-        <mat-card-title>Ler regulator</mat-card-title>
-        <mat-card-subtitle>ler &mdash; BBa_K??????</mat-card-subtitle>
+        <mat-card-title>Ler regulator series</mat-card-title>
+        <mat-card-subtitle>ler &mdash; BBa_K2688019 to BBa_K2688021</mat-card-subtitle>
       </mat-card-header>
-      <mat-card-content>A translation regulator protein that binds to LEE5 promoter sites.</mat-card-content>
-      <mat-card-actions><button mat-raised-button color="accent" routerLink="/biology/ler">More about this part</button> <button mat-raised-button color="accent">Registry page</button></mat-card-actions>
+      <mat-card-content>A transcription regulator protein that binds to LEE5 promoter sites, counteracting H-NS silecing and allowing transcription.
+        Several variants are available, with design implications.</mat-card-content>
+      <mat-card-actions><button mat-raised-button color="accent" routerLink="/biology/ler">More about these parts</button> </mat-card-actions>
     </mat-card>
 
 
@@ -74,22 +74,22 @@
 
     <mat-card (mouseenter)='mouseenter($event)' (mouseleave)="mouseleave($event)" class="z-depth" class="part-card">
       <mat-card-header>
-      <div mat-card-avatar class="cpg2-header-image"></div>
       <mat-card-title>Carboxypeptidase G2</mat-card-title>
-      <mat-card-subtitle>cpg2 &mdash; BBa_K??????</mat-card-subtitle>
+      <mat-card-subtitle>cpg2 &mdash; BBa_K2688003</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>An enzyme that cleaves folates, yielding a pterydoyl ring and glutamate(s).</mat-card-content>
-      <mat-card-actions><button mat-raised-button color="accent" routerLink="/biology/cpg2">More about this part</button> <button mat-raised-button color="accent">Registry page</button></mat-card-actions>
+      <mat-card-actions><button mat-raised-button color="accent" routerLink="/biology/cpg2">More about this part</button>
+        <a href="http://parts.igem.org/Part:BBa_K2688003" mat-raised-button color="accent" >Registry page</a></mat-card-actions>
     </mat-card>
 
     <mat-card (mouseenter)='mouseenter($event)' (mouseleave)="mouseleave($event)" class="z-depth" class="part-card">
       <mat-card-header>
-        <div mat-card-avatar class="cpg2-header-image"></div>
         <mat-card-title>FolylPolyGlutamate Synthetase</mat-card-title>
-        <mat-card-subtitle>folC &mdash; BBa_K??????</mat-card-subtitle>
+        <mat-card-subtitle>folC &mdash; BBa_K2688008</mat-card-subtitle>
       </mat-card-header>
-      <mat-card-content>An enzyme that adds glutamate to folate analogs.</mat-card-content>
-      <mat-card-actions><button mat-raised-button color="accent" routerLink="/biology/folc">More about this part</button> <button mat-raised-button color="accent">Registry page</button></mat-card-actions>
+      <mat-card-content>An enzyme that adds glutamates to folate analogs.</mat-card-content>
+      <mat-card-actions><button mat-raised-button color="accent" routerLink="/biology/folc">More about this part</button>
+        <a href="http://parts.igem.org/Part:BBa_K2688008" mat-raised-button color="accent" >Registry page</a></mat-card-actions>
     </mat-card>
 
 
@@ -138,12 +138,12 @@
 
     <mat-card (mouseenter)='mouseenter($event)' (mouseleave)="mouseleave($event)" class="z-depth" class="part-card">
       <mat-card-header>
-        <div mat-card-avatar class="cpg2-header-image"></div>
-        <mat-card-title>Promoter J23108 - Anderson collection</mat-card-title>
-        <mat-card-subtitle>BBa_J23108</mat-card-subtitle>
+        <mat-card-title>Promoter J23108 - Anderson collection </mat-card-title>
+        <mat-card-subtitle>BBa_J23108 &mdash; Corrected as BBa_K2688027</mat-card-subtitle>
       </mat-card-header>
-      <mat-card-content>A constitutive promoter.</mat-card-content>
-      <mat-card-actions><button mat-raised-button color="accent" routerLink="/biology/J23108">More about this part</button> <button mat-raised-button color="accent">Registry page</button></mat-card-actions>
+      <mat-card-content>A constitutive promoter. The shipped version contained unexpect illegal restriction site which we corrected.</mat-card-content>
+      <mat-card-actions><button mat-raised-button color="accent" routerLink="/biology/J23108">More about this part</button>
+        <a href="http://parts.igem.org/Part:BBa_K2688027" mat-raised-button color="accent" >Registry page</a></mat-card-actions>
     </mat-card>
 
 
