--- a/src/app/biology-section/interlab/interlab.component.html
+++ b/src/app/biology-section/interlab/interlab.component.html
@@ -2,9 +2,359 @@
   <h1 class="mat-h1">Interlab Study</h1>
 
   <mat-card class="dashboard-card" >
-    Reference test<reference-box shorthand="Test2018"></reference-box>. A new test <reference-box shorthand="Example2018"></reference-box>
+    <!-- Reference test<reference-box shorthand="Test2018"></reference-box>. A new test <reference-box shorthand="Example2018"></reference-box> -->
 
-    <br> <br> <br>
+    <!--  BEFORE## -->
+
+    <p>We use the following convention for wells coordinate of 96 well plates : horizontal/longer side 1 to 12, vertical/short side A to H.</p>
+
+    <h1>Calibration protocols</h1>
+    <h2>Calibration 1 : OD<sub>600</sub> Reference point - LUDOX protocol</h2>
+    <p>We added 100 &mu;L of LUDOX into wells A1, B1, C1, D1 and 100 &mu;L of dd H<sub>2</sub>O into wells A2, B2, C2, D2.
+      We measured absorbance at 600 nm of all samples.</p>
+    <p>OD obtained the resultes below : </p>
+
+
+    <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp halfwidetable">
+      <thead>
+      <tr>
+        <th class="mdl-data-table__cell--non-numeric"></th>
+        <th>LUDOX CL-X</th>
+        <th>H<sub>2</sub>O</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td class="mdl-data-table__cell--non-numeric">Replicate 1</td>
+        <td>0.057</td>
+        <td>0.036</td>
+      </tr>
+      <tr>
+        <td class="mdl-data-table__cell--non-numeric">Replicate 2</td>
+        <td>0.071</td>
+        <td>0.037</td>
+      </tr>
+      <tr>
+        <td class="mdl-data-table__cell--non-numeric">Replicate 3</td>
+        <td>0.072</td>
+        <td>0.040</td>
+      </tr>
+      <tr>
+        <td class="mdl-data-table__cell--non-numeric">Replicate 4</td>
+        <td>0.054</td>
+        <td>0.038</td>
+      </tr>
+      <tr>
+        <td class="mdl-data-table__cell--non-numeric importantlabel">Arith. Mean</td>
+        <td class="importantcell">0.026</td>
+        <td class="importantcell">0.038</td>
+      </tr>
+      <tr>
+        <td class="mdl-data-table__cell--non-numeric importantlabel">Corrected Abs<sub>600</sub></td>
+        <td class="importantcell">0.064</td>
+      </tr>
+      <tr>
+        <td class="mdl-data-table__cell--non-numeric importantlabel">Reference OD<sub>600</sub></td>
+        <td class="importantcell">0.063</td>
+
+      </tr>
+      <tr>
+        <td class="mdl-data-table__cell--non-numeric importantlabel">OD<sub>600</sub>/Abs<sub>600</sub></td>
+        <td class="importantcell">2.447</td>
+
+      </tr>
+      </tbody>
+    </table>
+
+
+    <h2>Calibration 2&nbsp;: Particule Standard Curve &ndash; Microsphere Protocol</h2>
+
+    <h3>Preparation of the Microsphere stock solution</h3>
+    
+    <p>We vortexed vigorously for 30 seconds the tube labeled &ldquo;Silica Beads&rdquo; from the InterLab test kit. We pipeted 96
+      &mu;L microspheres into a 1.5 mL eppendorf tube and added 904 &mu;L of dd H2O to the microspheres. We vortexed a second time
+      and our Microsphere stock solution is ready to use. </p>
+
+    <h3>Preparation of the serial dilutions of Microspheres </h3>
+
+    <p>We added 100 &micro;L of dd H2O into wells as below&nbsp;: </p>
+
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/3/39/T--GO_Paris-Saclay--water_plate_calib.png">
+
+    <p>Afterward, we vortexed vigorously the Microsphere stock solution and put 200 &micro;L of it into well A1. We tranfered 100 &micro;L
+      from A1 into A2, pipeted up and down few times and transfered 100 &micro;L from A2 into A3. We continued this pipeting until reaching
+      well A11. At the moment, we took 100 &micro;L of A11 and put it on trash. We redid this protocol for ligns B, C and D, as we will get replicates. </p>
+    <p>Thus, we made serial dilutions of our Microsphere Stock solution from well A, B, C and D1 to well A, B, C and D11 and A, B, C and D12 will be our blanks.</p>
+    
+    <p>We get the results below&nbsp;: </p>
+
+    <img  class="wideimg" src="http://2018.igem.org/wiki/images/2/26/T--GO_Paris-Saclay--microsphere_calib.png">
+    <img src="http://2018.igem.org/wiki/images/7/7f/T--GO_Paris-Saclay--microsphere_curve.png">
+    <img src="http://2018.igem.org/wiki/images/d/d5/T--GO_Paris-Saclay--microsphere_curve_log.png">
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/5/51/T--GO_Paris-Saclay--microsphere_res_table.png">
+
+    <h2>Calibration 3&nbsp;: Fluorescence standard curve &ndash; Fluorescein protocol</h2>
+    <h3>Preparation of the fluorescein stock solution</h3>
+    
+    <p>We span down fluorescein kit tube from the InterLab test kit. We prepared a 10X fluorescein stock solution by adding 1 mL of PBS 1X to fluorescein tube et resuspending it. After, we prepared a 10 dilution of this stock to achieve a 1X fluorescein stock solution ready to use. </p>
+    
+    <h3>Preparation of the serial dilutions of fluorescein &nbsp;</h3>
+    
+    <p>We added 100 &micro;L of 1X PBS into wells as below&nbsp;: </p>
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/3/39/T--GO_Paris-Saclay--water_plate_calib.png">
+
+    <p>Secondly, we put 200 &micro;L of our 1X fluorescein stock solution into well A1. We tranfered 100 &micro;L from A1 into A2, pipeted up and down few times and transfered 100 &micro;L from A2 into A3. We continued this pipeting until reaching well A11. At the moment, we took 100 &micro;L of A11 and put it on trash. We redid this protocol for ligns B, C and D, as we will get replicates. </p>
+    <p>Thus, we made serial dilutions of our 1X fluorescein stock solution from well A, B, C and D1 to well A, B, C and D11 and A, B, C and D12 will be our blanks.</p>
+    
+    <p>We get the results below&nbsp;: </p>
+    
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/b/b9/T--GO_Paris-Saclay--fluorescein_res_table_1.png">
+    <img src="http://2018.igem.org/wiki/images/3/3f/T--GO_Paris-Saclay--fluorescein_curve.png">
+    <img src="http://2018.igem.org/wiki/images/c/cd/T--GO_Paris-Saclay--fluorescein_curve_log.png">
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/b/b2/T--GO_Paris-Saclay--fluorescein_res_table_2.png">
+
+    <h1>Cell measurement protocol</h1>
+
+    <p>We have at our disposal following devices from iGEM Distribution Kit, all in pSB1C3 backbone and from Kit Plate 7&nbsp;: </p>
+
+    <table mat-table [dataSource]="dataSource_partsused"  class="semiwidetable mat-elevation-z4" >
+
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+
+      <!-- Position Column -->
+      <ng-container matColumnDef="device">
+        <th mat-header-cell *matHeaderCellDef> Device </th>
+        <td mat-cell *matCellDef="let part"> {{part.device}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="partnumber">
+        <th mat-header-cell *matHeaderCellDef> Part number </th>
+        <td mat-cell *matCellDef="let part"><a href="http://parts.igem.org/Part:{{part.partNumber}}">{{part.partNumber}}</a></td>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="location">
+        <th mat-header-cell *matHeaderCellDef> Location </th>
+        <td mat-cell *matCellDef="let part"> {{part.location}} </td>
+      </ng-container>
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns_partsused"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns_partsused;"></tr>
+    </table>
+
+    <p>We resuspended each device in 10 &micro;L of dd H2O and put them in tubes kept in our fridge.</p>
+
+    <h2>Day 1&nbsp;: Tranformation of these devices</h2>
+    <p>We used an heat choc protocol for this transformation. We put 50 &micro;L of DH5&alpha; competent cells in each tube
+      and we added 2 &micro;L of plasmid DNA. We let it cool 30 min on ice and made a 50 sec heat shock (at 42&deg;C).
+      We added 500 &micro;L of LB and let grow 1h at 37&deg;C at 185 rpm. Each tube were plated in one petri dish (LB + Chloramphenicol)
+      and we incubated them overnight at 37&deg;C. </p>
+    
+    <h2>Day 2&nbsp;: Results and cultures</h2>
+
+    <p>Results of transformation : There are colonies on each plates. It will be possible to take 2 colonies to carry on with the interlab study.</p>
+    <p>We made precultures of two clones per device named a and b with 2 mL of LB + Cm and let it grow overnight at 37&deg;C at 185 rpm.</p>
+    <p>We made overnight cultures from these precultures taking 150 &micro;L of it and adding 5 mL of LB + Cm and keeping the rest in the fridge as a backup.</p>
+    
+    <h2>Day 3&nbsp;: Cellule growth, sampling, and assay</h2>
+
+
+    <p>After a 1&nbsp;: 10 dilution of our cultures, we obtained following OD&nbsp;: </p>
+
+    <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp halfwidetable">
+      <thead>
+      <tr>
+        <th class="mdl-data-table__cell--non-numeric" colspan="1" rowspan="1">
+          Sample
+        </th>
+        <th class="mdl-data-table__cell--non-numeric" colspan="1" rowspan="1">
+          OD
+        </th>
+        <th  class="mdl-data-table__cell--non-numeric" colspan="1" rowspan="1">
+          Sample
+        </th>
+        <th  class="mdl-data-table__cell--non-numeric" colspan="1" rowspan="1">
+          OD
+        </th>
+        <th  class="mdl-data-table__cell--non-numeric" colspan="1" rowspan="1">
+          Sample
+        </th>
+        <th  class="mdl-data-table__cell--non-numeric" colspan="1" rowspan="1">
+          OD
+        </th>
+      </tr>
+      </thead>
+      <tbody>
+
+      <tr>
+        <td class="mdl-data-table__cell--non-numeric" colspan="1" rowspan="1">
+          J364000.1
+        </td>
+        <td colspan="1" rowspan="1">
+          0.21
+        </td>
+        <td colspan="1" rowspan="1">
+          J364007.1
+        </td>
+        <td colspan="1" rowspan="1">
+          0.15
+        </td>
+        <td class="mdl-data-table__cell--non-numeric importantlabel" colspan="1" rowspan="1">
+          negative control
+        </td>
+        <td class="mdl-data-table__cell--non-numeric importantlabel" colspan="1" rowspan="1">
+
+        </td>
+      </tr>
+      <tr>
+        <td colspan="1" rowspan="1">
+          J364000.2
+        </td>
+        <td colspan="1" rowspan="1">
+          0.23
+        </td>
+        <td colspan="1" rowspan="1">
+          J364007.2
+        </td>
+        <td colspan="1" rowspan="1">
+          0.18
+        </td>
+        <td colspan="1" rowspan="1">
+          R0040.1
+        </td>
+        <td colspan="1" rowspan="1">
+          0.22
+        </td>
+      </tr>
+      <tr>
+        <td colspan="1" rowspan="1">
+          J364001.1
+        </td>
+        <td colspan="1" rowspan="1">
+          0.19
+        </td>
+        <td colspan="1" rowspan="1">
+          J364008.1
+        </td>
+        <td colspan="1" rowspan="1">
+          0.27
+        </td>
+        <td colspan="1" rowspan="1">
+          R0040.2
+        </td>
+        <td colspan="1" rowspan="1">
+          0.22
+        </td>
+      </tr>
+      <tr>
+        <td colspan="1" rowspan="1">
+          J364001.2
+        </td>
+        <td colspan="1" rowspan="1">
+          0.22
+        </td>
+        <td colspan="1" rowspan="1">
+          J364008.2
+        </td>
+        <td colspan="1" rowspan="1">
+          0.24
+        </td>
+        <td class="mdl-data-table__cell--non-numeric importantlabel" colspan="1" rowspan="1">
+          positive control
+        </td>
+        <td colspan="1" rowspan="1">
+
+        </td>
+      </tr>
+      <tr>
+        <td colspan="1" rowspan="1">
+          J364002.1
+        </td>
+        <td colspan="1" rowspan="1">
+          0.22
+        </td>
+        <td colspan="1" rowspan="1">
+          J364009.1
+        </td>
+        <td colspan="1" rowspan="1">
+          0.2
+        </td>
+        <td colspan="1" rowspan="1">
+          I20270.1
+        </td>
+        <td colspan="1" rowspan="1">
+          0.26
+        </td>
+      </tr>
+      <tr>
+        <td colspan="1" rowspan="1">
+          J364002.2
+        </td>
+        <td colspan="1" rowspan="1">
+          0.24
+        </td>
+        <td colspan="1" rowspan="1">
+          J364009.2
+        </td>
+        <td colspan="1" rowspan="1">
+          0.19
+        </td>
+        <td colspan="1" rowspan="1">
+          I20270.2
+        </td>
+        <td colspan="1" rowspan="1">
+          0.21
+        </td>
+      </tr>
+      </tbody>
+    </table>
+    
+    <p>With those OD, we was able to do cultures at OD = 0,02 in a final volume of 12 mL LB + Cm. We took 500 &micro;L of these samples placed into 1,5 mL eppendorf tubes kept on ice during cultures&rsquo; growth during 6h at 37&deg;C and 185 rpm. When we stopped growth, we kept 500 &micro;L of growing cultures and we made measurements on both samples (T = 0h and T = 6h). </p>
+    <p>Our layout for Abs600&nbsp;and fluorescence measurement is the following one&nbsp;: </p>
+    <p>
+    <img src="http://2018.igem.org/wiki/images/a/ac/T--GO_Paris-Saclay--interlab_plate_layout.png" class="semiwideimg">
+    </p>
+
+    <p>We obtained results below&nbsp;: </p>
+    
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/1/1a/T--GO_Paris-Saclay--final_res_1.png">
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/f/f9/T--GO_Paris-Saclay--final_res_2.png">
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/c/cd/T--GO_Paris-Saclay--final_res_3.png">
+
+
+    <hr style="page-break-before:always;display:none;">
+    <p class="c5 c26"></p>
+    <h1>Colony forming units per 0.1 OD600&nbsp;E. coli&nbsp;cultures </h1>
+    <h2>Step 1&nbsp;: Starting sample preparation</h2>
+    <p id="h.gjdgxs"></p>
+    
+    
+    <h2>Step 2&nbsp;: Dilution series instructions</h2>
+    
+    
+    
+    <h2>Step 3&nbsp;: CFU / mL&nbsp;/ OD calculation instructions</h2>
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+
+
+
+    <!-- AFTER ##-->
+
 
 
   </mat-card>
