--- a/src/app/biology-section/interlab/interlab.component.html
+++ b/src/app/biology-section/interlab/interlab.component.html
@@ -1,6 +1,8 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Interlab Study</h1>
 
+<img src="http://2018.igem.org/wiki/images/9/9b/T--GO_Paris-Saclay--interlabpage.png" alt="banner interlab" class="bannerimg">
+
+
+<div class="grid-container">
   <mat-card class="dashboard-card" >
     <!-- Reference test<reference-box shorthand="Test2018"></reference-box>. A new test <reference-box shorthand="Example2018"></reference-box> -->
 
