--- a/src/app/biology-section/parts/parts.component.html
+++ b/src/app/biology-section/parts/parts.component.html
@@ -1,5 +1,6 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Parts</h1>
+<img src="http://2018.igem.org/wiki/images/7/7d/T--GO_Paris-Saclay--partspage.png" alt="parts banner" class="bannerimg">
+
+
 
   <mat-card class="dashboard-card" >
 
@@ -151,4 +152,4 @@
   </mat-card>
 
 
-</div>
+
