Project Details done

--- a/src/app/biology-section/bio-details/mtx-degradation/mtx-degradation.component.html
+++ b/src/app/biology-section/bio-details/mtx-degradation/mtx-degradation.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <mat-card class="dashboard-card largemargin">
-  On this page we present the methotrexate degradation pathway in more details.
+  <div class="formoredetailssee">On this page we present the methotrexate degradation pathway in more details.</div>
 
   <h1 >Design of the methotrexate transformation pathway</h1>
 
