--- a/src/app/biology-section/interlab/interlab.component.html
+++ b/src/app/biology-section/interlab/interlab.component.html
@@ -3,12 +3,15 @@
 
 
 <div class="grid-container">
-  <mat-card class="dashboard-card" >
+  <mat-card class="dashboard-card largemargin" >
     <!-- Reference test<reference-box shorthand="Test2018"></reference-box>. A new test <reference-box shorthand="Example2018"></reference-box> -->
 
     <!--  BEFORE## -->
 
     <p>We use the following convention for wells coordinate of 96 well plates : horizontal/longer side 1 to 12, vertical/short side A to H.</p>
+    <div class="centerstuff semiwideimg">
+      <img src="http://2018.igem.org/wiki/images/2/2d/T--GO_Paris-Saclay--tab1bon.png" class="wideimg">
+    </div>
 
     <h1>Calibration protocols</h1>
     <h2>Calibration 1 : OD<sub>600</sub> Reference point - LUDOX protocol</h2>
@@ -80,8 +83,9 @@
     <h3>Preparation of the serial dilutions of Microspheres </h3>
 
     <p>We added 100 &micro;L of dd H2O into wells as below&nbsp;: </p>
-
-    <img class="wideimg" src="http://2018.igem.org/wiki/images/3/39/T--GO_Paris-Saclay--water_plate_calib.png">
+    <div class="centerstuff semiwideimg">
+      <img class="wideimg" src="http://2018.igem.org/wiki/images/5/5a/T--GO_Paris-Saclay--tableau3.png">
+    </div>
 
     <p>Afterward, we vortexed vigorously the Microsphere stock solution and put 200 &micro;L of it into well A1. We tranfered 100 &micro;L
       from A1 into A2, pipeted up and down few times and transfered 100 &micro;L from A2 into A3. We continued this pipeting until reaching
@@ -90,10 +94,13 @@
     
     <p>We get the results below&nbsp;: </p>
 
-    <img  class="wideimg" src="http://2018.igem.org/wiki/images/2/26/T--GO_Paris-Saclay--microsphere_calib.png">
+    <img  class="wideimg" src="http://2018.igem.org/wiki/images/4/48/T--GO_Paris-Saclay--tableau4.png">
+    <div class="centerstuff semiwideimg">
+
     <img src="http://2018.igem.org/wiki/images/7/7f/T--GO_Paris-Saclay--microsphere_curve.png">
     <img src="http://2018.igem.org/wiki/images/d/d5/T--GO_Paris-Saclay--microsphere_curve_log.png">
-    <img class="wideimg" src="http://2018.igem.org/wiki/images/5/51/T--GO_Paris-Saclay--microsphere_res_table.png">
+    </div>
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/f/fa/T--GO_Paris-Saclay--tableau5.png">
 
     <h2>Calibration 3&nbsp;: Fluorescence standard curve &ndash; Fluorescein protocol</h2>
     <h3>Preparation of the fluorescein stock solution</h3>
@@ -103,17 +110,20 @@
     <h3>Preparation of the serial dilutions of fluorescein &nbsp;</h3>
     
     <p>We added 100 &micro;L of 1X PBS into wells as below&nbsp;: </p>
-    <img class="wideimg" src="http://2018.igem.org/wiki/images/3/39/T--GO_Paris-Saclay--water_plate_calib.png">
-
+    <div class="centerstuff semiwideimg">
+      <img class="wideimg" src="http://2018.igem.org/wiki/images/5/5a/T--GO_Paris-Saclay--tableau3.png">
+    </div>
     <p>Secondly, we put 200 &micro;L of our 1X fluorescein stock solution into well A1. We tranfered 100 &micro;L from A1 into A2, pipeted up and down few times and transfered 100 &micro;L from A2 into A3. We continued this pipeting until reaching well A11. At the moment, we took 100 &micro;L of A11 and put it on trash. We redid this protocol for ligns B, C and D, as we will get replicates. </p>
     <p>Thus, we made serial dilutions of our 1X fluorescein stock solution from well A, B, C and D1 to well A, B, C and D11 and A, B, C and D12 will be our blanks.</p>
     
     <p>We get the results below&nbsp;: </p>
     
-    <img class="wideimg" src="http://2018.igem.org/wiki/images/b/b9/T--GO_Paris-Saclay--fluorescein_res_table_1.png">
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/0/0b/T--GO_Paris-Saclay--tableau6.png">
+    <div class="centerstuff semiwideimg">
     <img src="http://2018.igem.org/wiki/images/3/3f/T--GO_Paris-Saclay--fluorescein_curve.png">
     <img src="http://2018.igem.org/wiki/images/c/cd/T--GO_Paris-Saclay--fluorescein_curve_log.png">
-    <img class="wideimg" src="http://2018.igem.org/wiki/images/b/b2/T--GO_Paris-Saclay--fluorescein_res_table_2.png">
+    </div>
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/4/43/T--GO_Paris-Saclay--tableau7.png">
 
     <h1>Cell measurement protocol</h1>
 
@@ -316,15 +326,15 @@
     
     <p>With those OD, we was able to do cultures at OD = 0,02 in a final volume of 12 mL LB + Cm. We took 500 &micro;L of these samples placed into 1,5 mL eppendorf tubes kept on ice during cultures&rsquo; growth during 6h at 37&deg;C and 185 rpm. When we stopped growth, we kept 500 &micro;L of growing cultures and we made measurements on both samples (T = 0h and T = 6h). </p>
     <p>Our layout for Abs600&nbsp;and fluorescence measurement is the following one&nbsp;: </p>
-    <p>
-    <img src="http://2018.igem.org/wiki/images/a/ac/T--GO_Paris-Saclay--interlab_plate_layout.png" class="semiwideimg">
-    </p>
+    <div class="centerstuff semiwideimg">
+      <img src="http://2018.igem.org/wiki/images/a/ac/T--GO_Paris-Saclay--interlab_plate_layout.png" class="wideimg">
+    </div>
 
     <p>We obtained results below&nbsp;: </p>
     
-    <img class="wideimg" src="http://2018.igem.org/wiki/images/1/1a/T--GO_Paris-Saclay--final_res_1.png">
-    <img class="wideimg" src="http://2018.igem.org/wiki/images/f/f9/T--GO_Paris-Saclay--final_res_2.png">
-    <img class="wideimg" src="http://2018.igem.org/wiki/images/c/cd/T--GO_Paris-Saclay--final_res_3.png">
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/8/8b/T--GO_Paris-Saclay--tab11.png">
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/e/ee/T--GO_Paris-Saclay--tab12.png">
+    <img class="wideimg" src="http://2018.igem.org/wiki/images/d/d2/T--GO_Paris-Saclay--tab13.png">
 
 
     <hr style="page-break-before:always;display:none;">
